// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`colors utilities getCSSColors should generate a CSS colors from a Colors object 1`] = `
Object {
  "colorIntents": Object {
    "accessibilityColor": "var(--color-prim-700)",
    "background0": "var(--color-grey-0)",
    "background1": "var(--color-grey-25)",
    "background2": "var(--color-grey-50)",
    "backgroundDisabled": "var(--color-grey-100)",
    "current": "var(--color-current)",
    "dangerAction": "var(--color-util-red-500)",
    "dangerBackground": "var(--color-util-red-100)",
    "dangerText": "var(--color-util-red-900)",
    "disabledText": "var(--color-grey-400)",
    "elevation0": "var(--color-grey-e0)",
    "elevation1": "var(--color-grey-e1)",
    "elevation2": "var(--color-grey-e2)",
    "elevation3": "var(--color-grey-e3)",
    "elevation4": "var(--color-grey-e4)",
    "infoAction": "var(--color-util-neutral-500)",
    "infoBackground": "var(--color-util-neutral-100)",
    "infoText": "var(--color-util-neutral-900)",
    "isLight": "0",
    "primary": "var(--color-prim-500)",
    "primaryText": "var(--color-grey-1000)",
    "secondary": "var(--color-acc1-500)",
    "secondaryText": "var(--color-grey-700)",
    "successAction": "var(--color-util-green-500)",
    "successBackground": "var(--color-util-green-100)",
    "successText": "var(--color-util-green-900)",
    "tertiaryText": "var(--color-grey-500)",
    "transparent": "var(--color-transparent)",
    "warningAction": "var(--color-util-yellow-500)",
    "warningBackground": "var(--color-util-yellow-100)",
    "warningText": "var(--color-util-yellow-900)",
  },
  "colorScheme": "LIGHT",
  "colors": Object {
    "accent1": Object {
      "100": "hsl(var(--color-acc1-base-hue), var(--color-acc1-base-sat), 90%, 1)",
      "300": "hsl(var(--color-acc1-base-hue), var(--color-acc1-base-sat), 70%, 1)",
      "500": "hsl(var(--color-acc1-base-hue), var(--color-acc1-base-sat), 50%, 1)",
      "700": "hsl(var(--color-acc1-base-hue), var(--color-acc1-base-sat), 30%, 1)",
      "900": "hsl(var(--color-acc1-base-hue), var(--color-acc1-base-sat), 10%, 1)",
      "baseHue": "323",
      "baseSat": "80%",
    },
    "accent2": Object {
      "100": "hsl(var(--color-acc2-base-hue), var(--color-acc2-base-sat), 90%, 1)",
      "300": "hsl(var(--color-acc2-base-hue), var(--color-acc2-base-sat), 70%, 1)",
      "500": "hsl(var(--color-acc2-base-hue), var(--color-acc2-base-sat), 50%, 1)",
      "700": "hsl(var(--color-acc2-base-hue), var(--color-acc2-base-sat), 30%, 1)",
      "900": "hsl(var(--color-acc2-base-hue), var(--color-acc2-base-sat), 10%, 1)",
      "baseHue": "290",
      "baseSat": "50%",
    },
    "accent3": Object {
      "100": "hsl(var(--color-acc3-base-hue), var(--color-acc3-base-sat), 86%, 1)",
      "300": "hsl(var(--color-acc3-base-hue), var(--color-acc3-base-sat), 68%, 1)",
      "500": "hsl(var(--color-acc3-base-hue), var(--color-acc3-base-sat), 50%, 1)",
      "700": "hsl(var(--color-acc3-base-hue), var(--color-acc3-base-sat), 32%, 1)",
      "900": "hsl(var(--color-acc3-base-hue), var(--color-acc3-base-sat), 14%, 1)",
      "baseHue": "0",
      "baseSat": "0%",
    },
    "accent4": Object {
      "100": "hsl(var(--color-acc4-base-hue), var(--color-acc4-base-sat), 86%, 1)",
      "300": "hsl(var(--color-acc4-base-hue), var(--color-acc4-base-sat), 68%, 1)",
      "500": "hsl(var(--color-acc4-base-hue), var(--color-acc4-base-sat), 50%, 1)",
      "700": "hsl(var(--color-acc4-base-hue), var(--color-acc4-base-sat), 32%, 1)",
      "900": "hsl(var(--color-acc4-base-hue), var(--color-acc4-base-sat), 14%, 1)",
      "baseHue": "0",
      "baseSat": "0%",
    },
    "accent5": Object {
      "100": "hsl(var(--color-acc5-base-hue), var(--color-acc5-base-sat), 86%, 1)",
      "300": "hsl(var(--color-acc5-base-hue), var(--color-acc5-base-sat), 68%, 1)",
      "500": "hsl(var(--color-acc5-base-hue), var(--color-acc5-base-sat), 50%, 1)",
      "700": "hsl(var(--color-acc5-base-hue), var(--color-acc5-base-sat), 32%, 1)",
      "900": "hsl(var(--color-acc5-base-hue), var(--color-acc5-base-sat), 14%, 1)",
      "baseHue": "0",
      "baseSat": "0%",
    },
    "accent6": Object {
      "100": "hsl(var(--color-acc6-base-hue), var(--color-acc6-base-sat), 86%, 1)",
      "300": "hsl(var(--color-acc6-base-hue), var(--color-acc6-base-sat), 68%, 1)",
      "500": "hsl(var(--color-acc6-base-hue), var(--color-acc6-base-sat), 50%, 1)",
      "700": "hsl(var(--color-acc6-base-hue), var(--color-acc6-base-sat), 32%, 1)",
      "900": "hsl(var(--color-acc6-base-hue), var(--color-acc6-base-sat), 14%, 1)",
      "baseHue": "0",
      "baseSat": "0%",
    },
    "accent7": Object {
      "100": "hsl(var(--color-acc7-base-hue), var(--color-acc7-base-sat), 86%, 1)",
      "300": "hsl(var(--color-acc7-base-hue), var(--color-acc7-base-sat), 68%, 1)",
      "500": "hsl(var(--color-acc7-base-hue), var(--color-acc7-base-sat), 50%, 1)",
      "700": "hsl(var(--color-acc7-base-hue), var(--color-acc7-base-sat), 32%, 1)",
      "900": "hsl(var(--color-acc7-base-hue), var(--color-acc7-base-sat), 14%, 1)",
      "baseHue": "0",
      "baseSat": "0%",
    },
    "code": Object {
      "codeAtrule": "hsl(195, 90%, 33%, 1)",
      "codeAttrName": "hsl(195, 90%, 33%, 1)",
      "codeAttrValue": "hsl(334, 86%, 48%, 1)",
      "codeBoolean": "hsl(179, 62%, 32%, 1)",
      "codeCdata": "hsl(60, 8%, 57%, 1)",
      "codeClassName": "hsl(240, 80%, 40%, 1)",
      "codeComment": "hsl(60, 8%, 57%, 1)",
      "codeConstant": "hsl(240, 80%, 40%, 1)",
      "codeDeleted": "hsl(294, 66%, 54%, 1)",
      "codeDoctype": "hsl(60, 8%, 57%, 1)",
      "codeEntity": "hsl(179, 62%, 32%, 1)",
      "codeFunction": "hsl(294, 66%, 54%, 1)",
      "codeFunctionVariable": "hsl(354, 66%, 54%, 1)",
      "codeHashbang": "hsl(213, 13%, 16%, 1)",
      "codeImportant": "hsl(213, 13%, 16%, 1)",
      "codeIncludedCdata": "hsl(213, 13%, 16%, 1)",
      "codeInserted": "hsl(179, 62%, 32%, 1)",
      "codeInternalSubset": "hsl(213, 13%, 16%, 1)",
      "codeInterpolation": "hsl(213, 13%, 16%, 1)",
      "codeInterpolationPunctuation": "hsl(213, 13%, 16%, 1)",
      "codeKeyword": "hsl(240, 80%, 40%, 1)",
      "codeLiteralProperty": "hsl(213, 13%, 16%, 1)",
      "codeMaybeClassName": "hsl(150, 57%, 32%, 1)",
      "codeNamespace": "hsl(70, 5%, 22%, 1)",
      "codeNumber": "hsl(179, 62%, 32%, 1)",
      "codeOperator": "hsl(176, 59%, 31%, 1)",
      "codeParameter": "hsl(354, 66%, 54%, 1)",
      "codeProlog": "hsl(60, 8%, 57%, 1)",
      "codeProperty": "hsl(179, 62%, 32%, 1)",
      "codePunctuation": "hsl(70, 5%, 22%, 1)",
      "codeRegex": "hsl(179, 62%, 32%, 1)",
      "codeRegexSource": "hsl(70, 5%, 22%, 1)",
      "codeScript": "hsl(213, 13%, 16%, 1)",
      "codeSelector": "hsl(195, 90%, 33%, 1)",
      "codeSelectorFunctionArgument": "hsl(70, 5%, 22%, 1)",
      "codeString": "hsl(334, 86%, 48%, 1)",
      "codeStringProperty": "hsl(70, 5%, 22%, 1)",
      "codeStyle": "hsl(70, 5%, 22%, 1)",
      "codeSymbol": "hsl(179, 62%, 32%, 1)",
      "codeTag": "hsl(240, 80%, 40%, 1)",
      "codeTemplatePunctuation": "hsl(70, 5%, 22%, 1)",
      "codeTemplateString": "hsl(70, 5%, 22%, 1)",
      "codeUnit": "hsl(195, 90%, 33%, 1)",
      "codeUrl": "hsl(179, 62%, 32%, 1)",
      "codeValue": "hsl(70, 5%, 22%, 1)",
      "codeVariable": "hsl(23, 100%, 29%, 1)",
      "editorBackground": "hsl(210, 29%, 97%, 1)",
      "editorForeground": "hsl(213, 13%, 16%, 1)",
      "editorHeaderBackground": "hsl(258, 48%, 83%, 1)",
      "editorHeaderForeground": "hsl(70, 5%, 22%, 1)",
      "editorHeaderTagBackground": "hsl(323, 100%, 81%, 1)",
      "editorHeaderTagForeground": "hsl(70, 5%, 22%, 1)",
      "editorSelectionBackground": "hsl(212, 97%, 43%, 0.15)",
    },
    "current": "currentColor",
    "effectTransparentHeavy": "hsl(0, 0%, 0%, 0.13)",
    "effectTransparentLight": "hsl(0, 0%, 0%, 0.1)",
    "effectTransparentMedium": "hsl(0, 0%, 0%, 0.1)",
    "grey": Object {
      "0": "hsl(var(--color-grey-base-hue), var(--color-grey-base-sat), 100%, 1)",
      "0-reversed": "hsl(var(--color-grey-base-hue), var(--color-grey-base-sat), 100%, 1)",
      "100": "hsl(var(--color-grey-base-hue), var(--color-grey-base-sat), 90%, 1)",
      "100-reversed": "hsl(var(--color-grey-base-hue), var(--color-grey-base-sat), , 1)",
      "1000": "hsl(var(--color-grey-base-hue), var(--color-grey-base-sat), 7%, 1)",
      "200": "hsl(var(--color-grey-base-hue), var(--color-grey-base-sat), 86%, 1)",
      "200-reversed": "hsl(var(--color-grey-base-hue), var(--color-grey-base-sat), , 1)",
      "25": "hsl(var(--color-grey-base-hue), var(--color-grey-base-sat), 97%, 1)",
      "300": "hsl(var(--color-grey-base-hue), var(--color-grey-base-sat), 83%, 1)",
      "400": "hsl(var(--color-grey-base-hue), var(--color-grey-base-sat), 73%, 1)",
      "50": "hsl(var(--color-grey-base-hue), var(--color-grey-base-sat), 93%, 1)",
      "500": "hsl(var(--color-grey-base-hue), var(--color-grey-base-sat), 66%, 1)",
      "600": "hsl(var(--color-grey-base-hue), var(--color-grey-base-sat), 59%, 1)",
      "700": "hsl(var(--color-grey-base-hue), var(--color-grey-base-sat), 46%, 1)",
      "800": "hsl(var(--color-grey-base-hue), var(--color-grey-base-sat), 26%, 1)",
      "900": "hsl(var(--color-grey-base-hue), var(--color-grey-base-sat), 13%, 1)",
      "baseHue": "222",
      "baseSat": "6%",
      "e0": "hsl(var(--color-grey-base-hue), var(--color-grey-base-sat), 100%, 1)",
      "e1": "hsl(var(--color-grey-base-hue), var(--color-grey-base-sat), 98%, 1)",
      "e2": "hsl(var(--color-grey-base-hue), var(--color-grey-base-sat), 95%, 1)",
      "e3": "hsl(var(--color-grey-base-hue), var(--color-grey-base-sat), 92%, 1)",
      "e4": "hsl(var(--color-grey-base-hue), var(--color-grey-base-sat), 89%, 1)",
    },
    "primary": Object {
      "100": "hsl(var(--color-prim-base-hue), var(--color-prim-base-sat), 86%, 1)",
      "300": "hsl(var(--color-prim-base-hue), var(--color-prim-base-sat), 68%, 1)",
      "500": "hsl(var(--color-prim-base-hue), var(--color-prim-base-sat), 50%, 1)",
      "700": "hsl(var(--color-prim-base-hue), var(--color-prim-base-sat), 32%, 1)",
      "900": "hsl(var(--color-prim-base-hue), var(--color-prim-base-sat), 14%, 1)",
      "baseHue": "222",
      "baseSat": "50%",
    },
    "transparent": "hsl(0, 0%, 0%, 0)",
    "utilityGreen": Object {
      "100": "hsl(var(--color-util-green-base-hue), var(--color-util-green-base-sat), 95%, 1)",
      "300": "hsl(var(--color-util-green-base-hue), var(--color-util-green-base-sat), 74%, 1)",
      "500": "hsl(var(--color-util-green-base-hue), var(--color-util-green-base-sat), 53%, 1)",
      "700": "hsl(var(--color-util-green-base-hue), var(--color-util-green-base-sat), 32%, 1)",
      "900": "hsl(var(--color-util-green-base-hue), var(--color-util-green-base-sat), 11%, 1)",
      "baseHue": "112",
      "baseSat": "71%",
    },
    "utilityNeutral": Object {
      "100": "hsl(var(--color-util-neutral-base-hue), var(--color-util-neutral-base-sat), 95%, 1)",
      "300": "hsl(var(--color-util-neutral-base-hue), var(--color-util-neutral-base-sat), 74%, 1)",
      "500": "hsl(var(--color-util-neutral-base-hue), var(--color-util-neutral-base-sat), 53%, 1)",
      "700": "hsl(var(--color-util-neutral-base-hue), var(--color-util-neutral-base-sat), 32%, 1)",
      "900": "hsl(var(--color-util-neutral-base-hue), var(--color-util-neutral-base-sat), 11%, 1)",
      "baseHue": "112",
      "baseSat": "50%",
    },
    "utilityRed": Object {
      "100": "hsl(var(--color-util-red-base-hue), var(--color-util-red-base-sat), 90%, 1)",
      "300": "hsl(var(--color-util-red-base-hue), var(--color-util-red-base-sat), 69%, 1)",
      "500": "hsl(var(--color-util-red-base-hue), var(--color-util-red-base-sat), 48%, 1)",
      "700": "hsl(var(--color-util-red-base-hue), var(--color-util-red-base-sat), 27%, 1)",
      "900": "hsl(var(--color-util-red-base-hue), var(--color-util-red-base-sat), 6%, 1)",
      "baseHue": "360",
      "baseSat": "84%",
    },
    "utilityYellow": Object {
      "100": "hsl(var(--color-util-yellow-base-hue), var(--color-util-yellow-base-sat), 96%, 1)",
      "300": "hsl(var(--color-util-yellow-base-hue), var(--color-util-yellow-base-sat), 75%, 1)",
      "500": "hsl(var(--color-util-yellow-base-hue), var(--color-util-yellow-base-sat), 54%, 1)",
      "700": "hsl(var(--color-util-yellow-base-hue), var(--color-util-yellow-base-sat), 33%, 1)",
      "900": "hsl(var(--color-util-yellow-base-hue), var(--color-util-yellow-base-sat), 12%, 1)",
      "baseHue": "47",
      "baseSat": "90%",
    },
  },
  "gradients": Object {
    "gradient1": "linear-gradient(45deg, hsl(323, 80%, 90%, 1) 0%,hsl(323, 80%, 50%, 1) 100%)",
    "gradient2": "linear-gradient(45deg, hsl(290, 50%, 90%, 1) 0%,hsl(290, 50%, 50%, 1) 100%)",
    "gradient3": "linear-gradient(45deg, hsl(0, 0%, 86%, 1) 0%,hsl(0, 0%, 50%, 1) 100%)",
  },
  "var": Object {
    "colorIntents": Object {
      "accessibilityColor": "var(--color-i-accessibility-color)",
      "background0": "var(--color-i-background0)",
      "background1": "var(--color-i-background1)",
      "background2": "var(--color-i-background2)",
      "backgroundDisabled": "var(--color-i-background-disabled)",
      "current": "var(--color-i-current)",
      "dangerAction": "var(--color-i-danger-action)",
      "dangerBackground": "var(--color-i-danger-background)",
      "dangerText": "var(--color-i-danger-text)",
      "disabledText": "var(--color-i-disabled-text)",
      "elevation0": "var(--color-i-elevation0)",
      "elevation1": "var(--color-i-elevation1)",
      "elevation2": "var(--color-i-elevation2)",
      "elevation3": "var(--color-i-elevation3)",
      "elevation4": "var(--color-i-elevation4)",
      "infoAction": "var(--color-i-info-action)",
      "infoBackground": "var(--color-i-info-background)",
      "infoText": "var(--color-i-info-text)",
      "isLight": "var(--color-i-is-light)",
      "primary": "var(--color-i-prim)",
      "primaryText": "var(--color-i-prim-text)",
      "secondary": "var(--color-i-sec)",
      "secondaryText": "var(--color-i-sec-text)",
      "successAction": "var(--color-i-success-action)",
      "successBackground": "var(--color-i-success-background)",
      "successText": "var(--color-i-success-text)",
      "tertiaryText": "var(--color-i-ter-text)",
      "transparent": "var(--color-i-transparent)",
      "warningAction": "var(--color-i-warning-action)",
      "warningBackground": "var(--color-i-warning-background)",
      "warningText": "var(--color-i-warning-text)",
    },
    "colors": Object {
      "accent1": Object {
        "100": "var(--color-acc1-100)",
        "300": "var(--color-acc1-300)",
        "500": "var(--color-acc1-500)",
        "700": "var(--color-acc1-700)",
        "900": "var(--color-acc1-900)",
        "baseHue": "var(--color-acc1-base-hue)",
        "baseSat": "var(--color-acc1-base-sat)",
      },
      "accent2": Object {
        "100": "var(--color-acc2-100)",
        "300": "var(--color-acc2-300)",
        "500": "var(--color-acc2-500)",
        "700": "var(--color-acc2-700)",
        "900": "var(--color-acc2-900)",
        "baseHue": "var(--color-acc2-base-hue)",
        "baseSat": "var(--color-acc2-base-sat)",
      },
      "accent3": Object {
        "100": "var(--color-acc3-100)",
        "300": "var(--color-acc3-300)",
        "500": "var(--color-acc3-500)",
        "700": "var(--color-acc3-700)",
        "900": "var(--color-acc3-900)",
        "baseHue": "var(--color-acc3-base-hue)",
        "baseSat": "var(--color-acc3-base-sat)",
      },
      "accent4": Object {
        "100": "var(--color-acc4-100)",
        "300": "var(--color-acc4-300)",
        "500": "var(--color-acc4-500)",
        "700": "var(--color-acc4-700)",
        "900": "var(--color-acc4-900)",
        "baseHue": "var(--color-acc4-base-hue)",
        "baseSat": "var(--color-acc4-base-sat)",
      },
      "accent5": Object {
        "100": "var(--color-acc5-100)",
        "300": "var(--color-acc5-300)",
        "500": "var(--color-acc5-500)",
        "700": "var(--color-acc5-700)",
        "900": "var(--color-acc5-900)",
        "baseHue": "var(--color-acc5-base-hue)",
        "baseSat": "var(--color-acc5-base-sat)",
      },
      "accent6": Object {
        "100": "var(--color-acc6-100)",
        "300": "var(--color-acc6-300)",
        "500": "var(--color-acc6-500)",
        "700": "var(--color-acc6-700)",
        "900": "var(--color-acc6-900)",
        "baseHue": "var(--color-acc6-base-hue)",
        "baseSat": "var(--color-acc6-base-sat)",
      },
      "accent7": Object {
        "100": "var(--color-acc7-100)",
        "300": "var(--color-acc7-300)",
        "500": "var(--color-acc7-500)",
        "700": "var(--color-acc7-700)",
        "900": "var(--color-acc7-900)",
        "baseHue": "var(--color-acc7-base-hue)",
        "baseSat": "var(--color-acc7-base-sat)",
      },
      "code": Object {
        "codeAtrule": "var(--color-code-code-atrule)",
        "codeAttrName": "var(--color-code-code-attr-name)",
        "codeAttrValue": "var(--color-code-code-attr-value)",
        "codeBoolean": "var(--color-code-code-boolean)",
        "codeCdata": "var(--color-code-code-cdata)",
        "codeClassName": "var(--color-code-code-class-name)",
        "codeComment": "var(--color-code-code-comment)",
        "codeConstant": "var(--color-code-code-constant)",
        "codeDeleted": "var(--color-code-code-deleted)",
        "codeDoctype": "var(--color-code-code-doctype)",
        "codeEntity": "var(--color-code-code-entity)",
        "codeFunction": "var(--color-code-code-function)",
        "codeFunctionVariable": "var(--color-code-code-function-variable)",
        "codeHashbang": "var(--color-code-code-hashbang)",
        "codeImportant": "var(--color-code-code-important)",
        "codeIncludedCdata": "var(--color-code-code-included-cdata)",
        "codeInserted": "var(--color-code-code-inserted)",
        "codeInternalSubset": "var(--color-code-code-internal-subset)",
        "codeInterpolation": "var(--color-code-code-interpolation)",
        "codeInterpolationPunctuation": "var(--color-code-code-interpolation-punctuation)",
        "codeKeyword": "var(--color-code-code-keyword)",
        "codeLiteralProperty": "var(--color-code-code-literal-property)",
        "codeMaybeClassName": "var(--color-code-code-maybe-class-name)",
        "codeNamespace": "var(--color-code-code-namespace)",
        "codeNumber": "var(--color-code-code-number)",
        "codeOperator": "var(--color-code-code-operator)",
        "codeParameter": "var(--color-code-code-parameter)",
        "codeProlog": "var(--color-code-code-prolog)",
        "codeProperty": "var(--color-code-code-property)",
        "codePunctuation": "var(--color-code-code-punctuation)",
        "codeRegex": "var(--color-code-code-regex)",
        "codeRegexSource": "var(--color-code-code-regex-source)",
        "codeScript": "var(--color-code-code-script)",
        "codeSelector": "var(--color-code-code-selector)",
        "codeSelectorFunctionArgument": "var(--color-code-code-selector-function-argument)",
        "codeString": "var(--color-code-code-string)",
        "codeStringProperty": "var(--color-code-code-string-property)",
        "codeStyle": "var(--color-code-code-style)",
        "codeSymbol": "var(--color-code-code-symbol)",
        "codeTag": "var(--color-code-code-tag)",
        "codeTemplatePunctuation": "var(--color-code-code-template-punctuation)",
        "codeTemplateString": "var(--color-code-code-template-string)",
        "codeUnit": "var(--color-code-code-unit)",
        "codeUrl": "var(--color-code-code-url)",
        "codeValue": "var(--color-code-code-value)",
        "codeVariable": "var(--color-code-code-variable)",
        "editorBackground": "var(--color-code-editor-background)",
        "editorForeground": "var(--color-code-editor-foreground)",
        "editorHeaderBackground": "var(--color-code-editor-header-background)",
        "editorHeaderForeground": "var(--color-code-editor-header-foreground)",
        "editorHeaderTagBackground": "var(--color-code-editor-header-tag-background)",
        "editorHeaderTagForeground": "var(--color-code-editor-header-tag-foreground)",
        "editorSelectionBackground": "var(--color-code-editor-selection-background)",
      },
      "current": "var(--color-current)",
      "effectTransparentHeavy": "var(--color-effect-transparent-heavy)",
      "effectTransparentLight": "var(--color-effect-transparent-light)",
      "effectTransparentMedium": "var(--color-effect-transparent-medium)",
      "grey": Object {
        "0": "var(--color-grey-0)",
        "0-reversed": "var(--color-grey-0-reversed)",
        "100": "var(--color-grey-100)",
        "100-reversed": "var(--color-grey-100-reversed)",
        "1000": "var(--color-grey-1000)",
        "200": "var(--color-grey-200)",
        "200-reversed": "var(--color-grey-200-reversed)",
        "25": "var(--color-grey-25)",
        "300": "var(--color-grey-300)",
        "400": "var(--color-grey-400)",
        "50": "var(--color-grey-50)",
        "500": "var(--color-grey-500)",
        "600": "var(--color-grey-600)",
        "700": "var(--color-grey-700)",
        "800": "var(--color-grey-800)",
        "900": "var(--color-grey-900)",
        "baseHue": "var(--color-grey-base-hue)",
        "baseSat": "var(--color-grey-base-sat)",
        "e0": "var(--color-grey-e0)",
        "e1": "var(--color-grey-e1)",
        "e2": "var(--color-grey-e2)",
        "e3": "var(--color-grey-e3)",
        "e4": "var(--color-grey-e4)",
      },
      "primary": Object {
        "100": "var(--color-prim-100)",
        "300": "var(--color-prim-300)",
        "500": "var(--color-prim-500)",
        "700": "var(--color-prim-700)",
        "900": "var(--color-prim-900)",
        "baseHue": "var(--color-prim-base-hue)",
        "baseSat": "var(--color-prim-base-sat)",
      },
      "transparent": "var(--color-transparent)",
      "utilityGreen": Object {
        "100": "var(--color-util-green-100)",
        "300": "var(--color-util-green-300)",
        "500": "var(--color-util-green-500)",
        "700": "var(--color-util-green-700)",
        "900": "var(--color-util-green-900)",
        "baseHue": "var(--color-util-green-base-hue)",
        "baseSat": "var(--color-util-green-base-sat)",
      },
      "utilityNeutral": Object {
        "100": "var(--color-util-neutral-100)",
        "300": "var(--color-util-neutral-300)",
        "500": "var(--color-util-neutral-500)",
        "700": "var(--color-util-neutral-700)",
        "900": "var(--color-util-neutral-900)",
        "baseHue": "var(--color-util-neutral-base-hue)",
        "baseSat": "var(--color-util-neutral-base-sat)",
      },
      "utilityRed": Object {
        "100": "var(--color-util-red-100)",
        "300": "var(--color-util-red-300)",
        "500": "var(--color-util-red-500)",
        "700": "var(--color-util-red-700)",
        "900": "var(--color-util-red-900)",
        "baseHue": "var(--color-util-red-base-hue)",
        "baseSat": "var(--color-util-red-base-sat)",
      },
      "utilityYellow": Object {
        "100": "var(--color-util-yellow-100)",
        "300": "var(--color-util-yellow-300)",
        "500": "var(--color-util-yellow-500)",
        "700": "var(--color-util-yellow-700)",
        "900": "var(--color-util-yellow-900)",
        "baseHue": "var(--color-util-yellow-base-hue)",
        "baseSat": "var(--color-util-yellow-base-sat)",
      },
    },
  },
  "varNames": Object {
    "colorIntents": Object {
      "accessibilityColor": "--color-i-accessibility-color",
      "background0": "--color-i-background0",
      "background1": "--color-i-background1",
      "background2": "--color-i-background2",
      "backgroundDisabled": "--color-i-background-disabled",
      "current": "--color-i-current",
      "dangerAction": "--color-i-danger-action",
      "dangerBackground": "--color-i-danger-background",
      "dangerText": "--color-i-danger-text",
      "disabledText": "--color-i-disabled-text",
      "elevation0": "--color-i-elevation0",
      "elevation1": "--color-i-elevation1",
      "elevation2": "--color-i-elevation2",
      "elevation3": "--color-i-elevation3",
      "elevation4": "--color-i-elevation4",
      "infoAction": "--color-i-info-action",
      "infoBackground": "--color-i-info-background",
      "infoText": "--color-i-info-text",
      "isLight": "--color-i-is-light",
      "primary": "--color-i-prim",
      "primaryText": "--color-i-prim-text",
      "secondary": "--color-i-sec",
      "secondaryText": "--color-i-sec-text",
      "successAction": "--color-i-success-action",
      "successBackground": "--color-i-success-background",
      "successText": "--color-i-success-text",
      "tertiaryText": "--color-i-ter-text",
      "transparent": "--color-i-transparent",
      "warningAction": "--color-i-warning-action",
      "warningBackground": "--color-i-warning-background",
      "warningText": "--color-i-warning-text",
    },
    "colors": Object {
      "accent1": Object {
        "100": "--color-acc1-100",
        "300": "--color-acc1-300",
        "500": "--color-acc1-500",
        "700": "--color-acc1-700",
        "900": "--color-acc1-900",
        "baseHue": "--color-acc1-base-hue",
        "baseSat": "--color-acc1-base-sat",
      },
      "accent2": Object {
        "100": "--color-acc2-100",
        "300": "--color-acc2-300",
        "500": "--color-acc2-500",
        "700": "--color-acc2-700",
        "900": "--color-acc2-900",
        "baseHue": "--color-acc2-base-hue",
        "baseSat": "--color-acc2-base-sat",
      },
      "accent3": Object {
        "100": "--color-acc3-100",
        "300": "--color-acc3-300",
        "500": "--color-acc3-500",
        "700": "--color-acc3-700",
        "900": "--color-acc3-900",
        "baseHue": "--color-acc3-base-hue",
        "baseSat": "--color-acc3-base-sat",
      },
      "accent4": Object {
        "100": "--color-acc4-100",
        "300": "--color-acc4-300",
        "500": "--color-acc4-500",
        "700": "--color-acc4-700",
        "900": "--color-acc4-900",
        "baseHue": "--color-acc4-base-hue",
        "baseSat": "--color-acc4-base-sat",
      },
      "accent5": Object {
        "100": "--color-acc5-100",
        "300": "--color-acc5-300",
        "500": "--color-acc5-500",
        "700": "--color-acc5-700",
        "900": "--color-acc5-900",
        "baseHue": "--color-acc5-base-hue",
        "baseSat": "--color-acc5-base-sat",
      },
      "accent6": Object {
        "100": "--color-acc6-100",
        "300": "--color-acc6-300",
        "500": "--color-acc6-500",
        "700": "--color-acc6-700",
        "900": "--color-acc6-900",
        "baseHue": "--color-acc6-base-hue",
        "baseSat": "--color-acc6-base-sat",
      },
      "accent7": Object {
        "100": "--color-acc7-100",
        "300": "--color-acc7-300",
        "500": "--color-acc7-500",
        "700": "--color-acc7-700",
        "900": "--color-acc7-900",
        "baseHue": "--color-acc7-base-hue",
        "baseSat": "--color-acc7-base-sat",
      },
      "code": Object {
        "codeAtrule": "--color-code-code-atrule",
        "codeAttrName": "--color-code-code-attr-name",
        "codeAttrValue": "--color-code-code-attr-value",
        "codeBoolean": "--color-code-code-boolean",
        "codeCdata": "--color-code-code-cdata",
        "codeClassName": "--color-code-code-class-name",
        "codeComment": "--color-code-code-comment",
        "codeConstant": "--color-code-code-constant",
        "codeDeleted": "--color-code-code-deleted",
        "codeDoctype": "--color-code-code-doctype",
        "codeEntity": "--color-code-code-entity",
        "codeFunction": "--color-code-code-function",
        "codeFunctionVariable": "--color-code-code-function-variable",
        "codeHashbang": "--color-code-code-hashbang",
        "codeImportant": "--color-code-code-important",
        "codeIncludedCdata": "--color-code-code-included-cdata",
        "codeInserted": "--color-code-code-inserted",
        "codeInternalSubset": "--color-code-code-internal-subset",
        "codeInterpolation": "--color-code-code-interpolation",
        "codeInterpolationPunctuation": "--color-code-code-interpolation-punctuation",
        "codeKeyword": "--color-code-code-keyword",
        "codeLiteralProperty": "--color-code-code-literal-property",
        "codeMaybeClassName": "--color-code-code-maybe-class-name",
        "codeNamespace": "--color-code-code-namespace",
        "codeNumber": "--color-code-code-number",
        "codeOperator": "--color-code-code-operator",
        "codeParameter": "--color-code-code-parameter",
        "codeProlog": "--color-code-code-prolog",
        "codeProperty": "--color-code-code-property",
        "codePunctuation": "--color-code-code-punctuation",
        "codeRegex": "--color-code-code-regex",
        "codeRegexSource": "--color-code-code-regex-source",
        "codeScript": "--color-code-code-script",
        "codeSelector": "--color-code-code-selector",
        "codeSelectorFunctionArgument": "--color-code-code-selector-function-argument",
        "codeString": "--color-code-code-string",
        "codeStringProperty": "--color-code-code-string-property",
        "codeStyle": "--color-code-code-style",
        "codeSymbol": "--color-code-code-symbol",
        "codeTag": "--color-code-code-tag",
        "codeTemplatePunctuation": "--color-code-code-template-punctuation",
        "codeTemplateString": "--color-code-code-template-string",
        "codeUnit": "--color-code-code-unit",
        "codeUrl": "--color-code-code-url",
        "codeValue": "--color-code-code-value",
        "codeVariable": "--color-code-code-variable",
        "editorBackground": "--color-code-editor-background",
        "editorForeground": "--color-code-editor-foreground",
        "editorHeaderBackground": "--color-code-editor-header-background",
        "editorHeaderForeground": "--color-code-editor-header-foreground",
        "editorHeaderTagBackground": "--color-code-editor-header-tag-background",
        "editorHeaderTagForeground": "--color-code-editor-header-tag-foreground",
        "editorSelectionBackground": "--color-code-editor-selection-background",
      },
      "current": "--color-current",
      "effectTransparentHeavy": "--color-effect-transparent-heavy",
      "effectTransparentLight": "--color-effect-transparent-light",
      "effectTransparentMedium": "--color-effect-transparent-medium",
      "grey": Object {
        "0": "--color-grey-0",
        "0-reversed": "--color-grey-0-reversed",
        "100": "--color-grey-100",
        "100-reversed": "--color-grey-100-reversed",
        "1000": "--color-grey-1000",
        "200": "--color-grey-200",
        "200-reversed": "--color-grey-200-reversed",
        "25": "--color-grey-25",
        "300": "--color-grey-300",
        "400": "--color-grey-400",
        "50": "--color-grey-50",
        "500": "--color-grey-500",
        "600": "--color-grey-600",
        "700": "--color-grey-700",
        "800": "--color-grey-800",
        "900": "--color-grey-900",
        "baseHue": "--color-grey-base-hue",
        "baseSat": "--color-grey-base-sat",
        "e0": "--color-grey-e0",
        "e1": "--color-grey-e1",
        "e2": "--color-grey-e2",
        "e3": "--color-grey-e3",
        "e4": "--color-grey-e4",
      },
      "primary": Object {
        "100": "--color-prim-100",
        "300": "--color-prim-300",
        "500": "--color-prim-500",
        "700": "--color-prim-700",
        "900": "--color-prim-900",
        "baseHue": "--color-prim-base-hue",
        "baseSat": "--color-prim-base-sat",
      },
      "transparent": "--color-transparent",
      "utilityGreen": Object {
        "100": "--color-util-green-100",
        "300": "--color-util-green-300",
        "500": "--color-util-green-500",
        "700": "--color-util-green-700",
        "900": "--color-util-green-900",
        "baseHue": "--color-util-green-base-hue",
        "baseSat": "--color-util-green-base-sat",
      },
      "utilityNeutral": Object {
        "100": "--color-util-neutral-100",
        "300": "--color-util-neutral-300",
        "500": "--color-util-neutral-500",
        "700": "--color-util-neutral-700",
        "900": "--color-util-neutral-900",
        "baseHue": "--color-util-neutral-base-hue",
        "baseSat": "--color-util-neutral-base-sat",
      },
      "utilityRed": Object {
        "100": "--color-util-red-100",
        "300": "--color-util-red-300",
        "500": "--color-util-red-500",
        "700": "--color-util-red-700",
        "900": "--color-util-red-900",
        "baseHue": "--color-util-red-base-hue",
        "baseSat": "--color-util-red-base-sat",
      },
      "utilityYellow": Object {
        "100": "--color-util-yellow-100",
        "300": "--color-util-yellow-300",
        "500": "--color-util-yellow-500",
        "700": "--color-util-yellow-700",
        "900": "--color-util-yellow-900",
        "baseHue": "--color-util-yellow-base-hue",
        "baseSat": "--color-util-yellow-base-sat",
      },
    },
  },
}
`;

exports[`colors utilities getCSSVarNamesForColors should generate CSS statement to access Colors CSS vars 1`] = `
Object {
  "colorIntents": Object {
    "accessibilityColor": "var(--color-i-accessibility-color)",
    "background0": "var(--color-i-background0)",
    "background1": "var(--color-i-background1)",
    "background2": "var(--color-i-background2)",
    "backgroundDisabled": "var(--color-i-background-disabled)",
    "current": "var(--color-i-current)",
    "dangerAction": "var(--color-i-danger-action)",
    "dangerBackground": "var(--color-i-danger-background)",
    "dangerText": "var(--color-i-danger-text)",
    "disabledText": "var(--color-i-disabled-text)",
    "elevation0": "var(--color-i-elevation0)",
    "elevation1": "var(--color-i-elevation1)",
    "elevation2": "var(--color-i-elevation2)",
    "elevation3": "var(--color-i-elevation3)",
    "elevation4": "var(--color-i-elevation4)",
    "infoAction": "var(--color-i-info-action)",
    "infoBackground": "var(--color-i-info-background)",
    "infoText": "var(--color-i-info-text)",
    "isLight": "var(--color-i-is-light)",
    "primary": "var(--color-i-prim)",
    "primaryText": "var(--color-i-prim-text)",
    "secondary": "var(--color-i-sec)",
    "secondaryText": "var(--color-i-sec-text)",
    "successAction": "var(--color-i-success-action)",
    "successBackground": "var(--color-i-success-background)",
    "successText": "var(--color-i-success-text)",
    "tertiaryText": "var(--color-i-ter-text)",
    "transparent": "var(--color-i-transparent)",
    "warningAction": "var(--color-i-warning-action)",
    "warningBackground": "var(--color-i-warning-background)",
    "warningText": "var(--color-i-warning-text)",
  },
  "colors": Object {
    "accent1": Object {
      "100": "var(--color-acc1-100)",
      "300": "var(--color-acc1-300)",
      "500": "var(--color-acc1-500)",
      "700": "var(--color-acc1-700)",
      "900": "var(--color-acc1-900)",
      "baseHue": "var(--color-acc1-base-hue)",
      "baseSat": "var(--color-acc1-base-sat)",
    },
    "accent2": Object {
      "100": "var(--color-acc2-100)",
      "300": "var(--color-acc2-300)",
      "500": "var(--color-acc2-500)",
      "700": "var(--color-acc2-700)",
      "900": "var(--color-acc2-900)",
      "baseHue": "var(--color-acc2-base-hue)",
      "baseSat": "var(--color-acc2-base-sat)",
    },
    "accent3": Object {
      "100": "var(--color-acc3-100)",
      "300": "var(--color-acc3-300)",
      "500": "var(--color-acc3-500)",
      "700": "var(--color-acc3-700)",
      "900": "var(--color-acc3-900)",
      "baseHue": "var(--color-acc3-base-hue)",
      "baseSat": "var(--color-acc3-base-sat)",
    },
    "accent4": Object {
      "100": "var(--color-acc4-100)",
      "300": "var(--color-acc4-300)",
      "500": "var(--color-acc4-500)",
      "700": "var(--color-acc4-700)",
      "900": "var(--color-acc4-900)",
      "baseHue": "var(--color-acc4-base-hue)",
      "baseSat": "var(--color-acc4-base-sat)",
    },
    "accent5": Object {
      "100": "var(--color-acc5-100)",
      "300": "var(--color-acc5-300)",
      "500": "var(--color-acc5-500)",
      "700": "var(--color-acc5-700)",
      "900": "var(--color-acc5-900)",
      "baseHue": "var(--color-acc5-base-hue)",
      "baseSat": "var(--color-acc5-base-sat)",
    },
    "accent6": Object {
      "100": "var(--color-acc6-100)",
      "300": "var(--color-acc6-300)",
      "500": "var(--color-acc6-500)",
      "700": "var(--color-acc6-700)",
      "900": "var(--color-acc6-900)",
      "baseHue": "var(--color-acc6-base-hue)",
      "baseSat": "var(--color-acc6-base-sat)",
    },
    "accent7": Object {
      "100": "var(--color-acc7-100)",
      "300": "var(--color-acc7-300)",
      "500": "var(--color-acc7-500)",
      "700": "var(--color-acc7-700)",
      "900": "var(--color-acc7-900)",
      "baseHue": "var(--color-acc7-base-hue)",
      "baseSat": "var(--color-acc7-base-sat)",
    },
    "code": Object {
      "codeAtrule": "var(--color-code-code-atrule)",
      "codeAttrName": "var(--color-code-code-attr-name)",
      "codeAttrValue": "var(--color-code-code-attr-value)",
      "codeBoolean": "var(--color-code-code-boolean)",
      "codeCdata": "var(--color-code-code-cdata)",
      "codeClassName": "var(--color-code-code-class-name)",
      "codeComment": "var(--color-code-code-comment)",
      "codeConstant": "var(--color-code-code-constant)",
      "codeDeleted": "var(--color-code-code-deleted)",
      "codeDoctype": "var(--color-code-code-doctype)",
      "codeEntity": "var(--color-code-code-entity)",
      "codeFunction": "var(--color-code-code-function)",
      "codeFunctionVariable": "var(--color-code-code-function-variable)",
      "codeHashbang": "var(--color-code-code-hashbang)",
      "codeImportant": "var(--color-code-code-important)",
      "codeIncludedCdata": "var(--color-code-code-included-cdata)",
      "codeInserted": "var(--color-code-code-inserted)",
      "codeInternalSubset": "var(--color-code-code-internal-subset)",
      "codeInterpolation": "var(--color-code-code-interpolation)",
      "codeInterpolationPunctuation": "var(--color-code-code-interpolation-punctuation)",
      "codeKeyword": "var(--color-code-code-keyword)",
      "codeLiteralProperty": "var(--color-code-code-literal-property)",
      "codeMaybeClassName": "var(--color-code-code-maybe-class-name)",
      "codeNamespace": "var(--color-code-code-namespace)",
      "codeNumber": "var(--color-code-code-number)",
      "codeOperator": "var(--color-code-code-operator)",
      "codeParameter": "var(--color-code-code-parameter)",
      "codeProlog": "var(--color-code-code-prolog)",
      "codeProperty": "var(--color-code-code-property)",
      "codePunctuation": "var(--color-code-code-punctuation)",
      "codeRegex": "var(--color-code-code-regex)",
      "codeRegexSource": "var(--color-code-code-regex-source)",
      "codeScript": "var(--color-code-code-script)",
      "codeSelector": "var(--color-code-code-selector)",
      "codeSelectorFunctionArgument": "var(--color-code-code-selector-function-argument)",
      "codeString": "var(--color-code-code-string)",
      "codeStringProperty": "var(--color-code-code-string-property)",
      "codeStyle": "var(--color-code-code-style)",
      "codeSymbol": "var(--color-code-code-symbol)",
      "codeTag": "var(--color-code-code-tag)",
      "codeTemplatePunctuation": "var(--color-code-code-template-punctuation)",
      "codeTemplateString": "var(--color-code-code-template-string)",
      "codeUnit": "var(--color-code-code-unit)",
      "codeUrl": "var(--color-code-code-url)",
      "codeValue": "var(--color-code-code-value)",
      "codeVariable": "var(--color-code-code-variable)",
      "editorBackground": "var(--color-code-editor-background)",
      "editorForeground": "var(--color-code-editor-foreground)",
      "editorHeaderBackground": "var(--color-code-editor-header-background)",
      "editorHeaderForeground": "var(--color-code-editor-header-foreground)",
      "editorHeaderTagBackground": "var(--color-code-editor-header-tag-background)",
      "editorHeaderTagForeground": "var(--color-code-editor-header-tag-foreground)",
      "editorSelectionBackground": "var(--color-code-editor-selection-background)",
    },
    "current": "var(--color-current)",
    "effectTransparentHeavy": "var(--color-effect-transparent-heavy)",
    "effectTransparentLight": "var(--color-effect-transparent-light)",
    "effectTransparentMedium": "var(--color-effect-transparent-medium)",
    "grey": Object {
      "0": "var(--color-grey-0)",
      "0-reversed": "var(--color-grey-0-reversed)",
      "100": "var(--color-grey-100)",
      "100-reversed": "var(--color-grey-100-reversed)",
      "1000": "var(--color-grey-1000)",
      "200": "var(--color-grey-200)",
      "200-reversed": "var(--color-grey-200-reversed)",
      "25": "var(--color-grey-25)",
      "300": "var(--color-grey-300)",
      "400": "var(--color-grey-400)",
      "50": "var(--color-grey-50)",
      "500": "var(--color-grey-500)",
      "600": "var(--color-grey-600)",
      "700": "var(--color-grey-700)",
      "800": "var(--color-grey-800)",
      "900": "var(--color-grey-900)",
      "baseHue": "var(--color-grey-base-hue)",
      "baseSat": "var(--color-grey-base-sat)",
      "e0": "var(--color-grey-e0)",
      "e1": "var(--color-grey-e1)",
      "e2": "var(--color-grey-e2)",
      "e3": "var(--color-grey-e3)",
      "e4": "var(--color-grey-e4)",
    },
    "primary": Object {
      "100": "var(--color-prim-100)",
      "300": "var(--color-prim-300)",
      "500": "var(--color-prim-500)",
      "700": "var(--color-prim-700)",
      "900": "var(--color-prim-900)",
      "baseHue": "var(--color-prim-base-hue)",
      "baseSat": "var(--color-prim-base-sat)",
    },
    "transparent": "var(--color-transparent)",
    "utilityGreen": Object {
      "100": "var(--color-util-green-100)",
      "300": "var(--color-util-green-300)",
      "500": "var(--color-util-green-500)",
      "700": "var(--color-util-green-700)",
      "900": "var(--color-util-green-900)",
      "baseHue": "var(--color-util-green-base-hue)",
      "baseSat": "var(--color-util-green-base-sat)",
    },
    "utilityNeutral": Object {
      "100": "var(--color-util-neutral-100)",
      "300": "var(--color-util-neutral-300)",
      "500": "var(--color-util-neutral-500)",
      "700": "var(--color-util-neutral-700)",
      "900": "var(--color-util-neutral-900)",
      "baseHue": "var(--color-util-neutral-base-hue)",
      "baseSat": "var(--color-util-neutral-base-sat)",
    },
    "utilityRed": Object {
      "100": "var(--color-util-red-100)",
      "300": "var(--color-util-red-300)",
      "500": "var(--color-util-red-500)",
      "700": "var(--color-util-red-700)",
      "900": "var(--color-util-red-900)",
      "baseHue": "var(--color-util-red-base-hue)",
      "baseSat": "var(--color-util-red-base-sat)",
    },
    "utilityYellow": Object {
      "100": "var(--color-util-yellow-100)",
      "300": "var(--color-util-yellow-300)",
      "500": "var(--color-util-yellow-500)",
      "700": "var(--color-util-yellow-700)",
      "900": "var(--color-util-yellow-900)",
      "baseHue": "var(--color-util-yellow-base-hue)",
      "baseSat": "var(--color-util-yellow-base-sat)",
    },
  },
}
`;

exports[`colors utilities getCSSVarNamesForColors should generate CSS variable names for a given Colors object 1`] = `
Object {
  "colorIntents": Object {
    "accessibilityColor": "--color-i-accessibility-color",
    "background0": "--color-i-background0",
    "background1": "--color-i-background1",
    "background2": "--color-i-background2",
    "backgroundDisabled": "--color-i-background-disabled",
    "current": "--color-i-current",
    "dangerAction": "--color-i-danger-action",
    "dangerBackground": "--color-i-danger-background",
    "dangerText": "--color-i-danger-text",
    "disabledText": "--color-i-disabled-text",
    "elevation0": "--color-i-elevation0",
    "elevation1": "--color-i-elevation1",
    "elevation2": "--color-i-elevation2",
    "elevation3": "--color-i-elevation3",
    "elevation4": "--color-i-elevation4",
    "infoAction": "--color-i-info-action",
    "infoBackground": "--color-i-info-background",
    "infoText": "--color-i-info-text",
    "isLight": "--color-i-is-light",
    "primary": "--color-i-prim",
    "primaryText": "--color-i-prim-text",
    "secondary": "--color-i-sec",
    "secondaryText": "--color-i-sec-text",
    "successAction": "--color-i-success-action",
    "successBackground": "--color-i-success-background",
    "successText": "--color-i-success-text",
    "tertiaryText": "--color-i-ter-text",
    "transparent": "--color-i-transparent",
    "warningAction": "--color-i-warning-action",
    "warningBackground": "--color-i-warning-background",
    "warningText": "--color-i-warning-text",
  },
  "colors": Object {
    "accent1": Object {
      "100": "--color-acc1-100",
      "300": "--color-acc1-300",
      "500": "--color-acc1-500",
      "700": "--color-acc1-700",
      "900": "--color-acc1-900",
      "baseHue": "--color-acc1-base-hue",
      "baseSat": "--color-acc1-base-sat",
    },
    "accent2": Object {
      "100": "--color-acc2-100",
      "300": "--color-acc2-300",
      "500": "--color-acc2-500",
      "700": "--color-acc2-700",
      "900": "--color-acc2-900",
      "baseHue": "--color-acc2-base-hue",
      "baseSat": "--color-acc2-base-sat",
    },
    "accent3": Object {
      "100": "--color-acc3-100",
      "300": "--color-acc3-300",
      "500": "--color-acc3-500",
      "700": "--color-acc3-700",
      "900": "--color-acc3-900",
      "baseHue": "--color-acc3-base-hue",
      "baseSat": "--color-acc3-base-sat",
    },
    "accent4": Object {
      "100": "--color-acc4-100",
      "300": "--color-acc4-300",
      "500": "--color-acc4-500",
      "700": "--color-acc4-700",
      "900": "--color-acc4-900",
      "baseHue": "--color-acc4-base-hue",
      "baseSat": "--color-acc4-base-sat",
    },
    "accent5": Object {
      "100": "--color-acc5-100",
      "300": "--color-acc5-300",
      "500": "--color-acc5-500",
      "700": "--color-acc5-700",
      "900": "--color-acc5-900",
      "baseHue": "--color-acc5-base-hue",
      "baseSat": "--color-acc5-base-sat",
    },
    "accent6": Object {
      "100": "--color-acc6-100",
      "300": "--color-acc6-300",
      "500": "--color-acc6-500",
      "700": "--color-acc6-700",
      "900": "--color-acc6-900",
      "baseHue": "--color-acc6-base-hue",
      "baseSat": "--color-acc6-base-sat",
    },
    "accent7": Object {
      "100": "--color-acc7-100",
      "300": "--color-acc7-300",
      "500": "--color-acc7-500",
      "700": "--color-acc7-700",
      "900": "--color-acc7-900",
      "baseHue": "--color-acc7-base-hue",
      "baseSat": "--color-acc7-base-sat",
    },
    "code": Object {
      "codeAtrule": "--color-code-code-atrule",
      "codeAttrName": "--color-code-code-attr-name",
      "codeAttrValue": "--color-code-code-attr-value",
      "codeBoolean": "--color-code-code-boolean",
      "codeCdata": "--color-code-code-cdata",
      "codeClassName": "--color-code-code-class-name",
      "codeComment": "--color-code-code-comment",
      "codeConstant": "--color-code-code-constant",
      "codeDeleted": "--color-code-code-deleted",
      "codeDoctype": "--color-code-code-doctype",
      "codeEntity": "--color-code-code-entity",
      "codeFunction": "--color-code-code-function",
      "codeFunctionVariable": "--color-code-code-function-variable",
      "codeHashbang": "--color-code-code-hashbang",
      "codeImportant": "--color-code-code-important",
      "codeIncludedCdata": "--color-code-code-included-cdata",
      "codeInserted": "--color-code-code-inserted",
      "codeInternalSubset": "--color-code-code-internal-subset",
      "codeInterpolation": "--color-code-code-interpolation",
      "codeInterpolationPunctuation": "--color-code-code-interpolation-punctuation",
      "codeKeyword": "--color-code-code-keyword",
      "codeLiteralProperty": "--color-code-code-literal-property",
      "codeMaybeClassName": "--color-code-code-maybe-class-name",
      "codeNamespace": "--color-code-code-namespace",
      "codeNumber": "--color-code-code-number",
      "codeOperator": "--color-code-code-operator",
      "codeParameter": "--color-code-code-parameter",
      "codeProlog": "--color-code-code-prolog",
      "codeProperty": "--color-code-code-property",
      "codePunctuation": "--color-code-code-punctuation",
      "codeRegex": "--color-code-code-regex",
      "codeRegexSource": "--color-code-code-regex-source",
      "codeScript": "--color-code-code-script",
      "codeSelector": "--color-code-code-selector",
      "codeSelectorFunctionArgument": "--color-code-code-selector-function-argument",
      "codeString": "--color-code-code-string",
      "codeStringProperty": "--color-code-code-string-property",
      "codeStyle": "--color-code-code-style",
      "codeSymbol": "--color-code-code-symbol",
      "codeTag": "--color-code-code-tag",
      "codeTemplatePunctuation": "--color-code-code-template-punctuation",
      "codeTemplateString": "--color-code-code-template-string",
      "codeUnit": "--color-code-code-unit",
      "codeUrl": "--color-code-code-url",
      "codeValue": "--color-code-code-value",
      "codeVariable": "--color-code-code-variable",
      "editorBackground": "--color-code-editor-background",
      "editorForeground": "--color-code-editor-foreground",
      "editorHeaderBackground": "--color-code-editor-header-background",
      "editorHeaderForeground": "--color-code-editor-header-foreground",
      "editorHeaderTagBackground": "--color-code-editor-header-tag-background",
      "editorHeaderTagForeground": "--color-code-editor-header-tag-foreground",
      "editorSelectionBackground": "--color-code-editor-selection-background",
    },
    "current": "--color-current",
    "effectTransparentHeavy": "--color-effect-transparent-heavy",
    "effectTransparentLight": "--color-effect-transparent-light",
    "effectTransparentMedium": "--color-effect-transparent-medium",
    "grey": Object {
      "0": "--color-grey-0",
      "0-reversed": "--color-grey-0-reversed",
      "100": "--color-grey-100",
      "100-reversed": "--color-grey-100-reversed",
      "1000": "--color-grey-1000",
      "200": "--color-grey-200",
      "200-reversed": "--color-grey-200-reversed",
      "25": "--color-grey-25",
      "300": "--color-grey-300",
      "400": "--color-grey-400",
      "50": "--color-grey-50",
      "500": "--color-grey-500",
      "600": "--color-grey-600",
      "700": "--color-grey-700",
      "800": "--color-grey-800",
      "900": "--color-grey-900",
      "baseHue": "--color-grey-base-hue",
      "baseSat": "--color-grey-base-sat",
      "e0": "--color-grey-e0",
      "e1": "--color-grey-e1",
      "e2": "--color-grey-e2",
      "e3": "--color-grey-e3",
      "e4": "--color-grey-e4",
    },
    "primary": Object {
      "100": "--color-prim-100",
      "300": "--color-prim-300",
      "500": "--color-prim-500",
      "700": "--color-prim-700",
      "900": "--color-prim-900",
      "baseHue": "--color-prim-base-hue",
      "baseSat": "--color-prim-base-sat",
    },
    "transparent": "--color-transparent",
    "utilityGreen": Object {
      "100": "--color-util-green-100",
      "300": "--color-util-green-300",
      "500": "--color-util-green-500",
      "700": "--color-util-green-700",
      "900": "--color-util-green-900",
      "baseHue": "--color-util-green-base-hue",
      "baseSat": "--color-util-green-base-sat",
    },
    "utilityNeutral": Object {
      "100": "--color-util-neutral-100",
      "300": "--color-util-neutral-300",
      "500": "--color-util-neutral-500",
      "700": "--color-util-neutral-700",
      "900": "--color-util-neutral-900",
      "baseHue": "--color-util-neutral-base-hue",
      "baseSat": "--color-util-neutral-base-sat",
    },
    "utilityRed": Object {
      "100": "--color-util-red-100",
      "300": "--color-util-red-300",
      "500": "--color-util-red-500",
      "700": "--color-util-red-700",
      "900": "--color-util-red-900",
      "baseHue": "--color-util-red-base-hue",
      "baseSat": "--color-util-red-base-sat",
    },
    "utilityYellow": Object {
      "100": "--color-util-yellow-100",
      "300": "--color-util-yellow-300",
      "500": "--color-util-yellow-500",
      "700": "--color-util-yellow-700",
      "900": "--color-util-yellow-900",
      "baseHue": "--color-util-yellow-base-hue",
      "baseSat": "--color-util-yellow-base-sat",
    },
  },
}
`;
